<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.collectors.CollectorsFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".AlbumsActivity"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/colectors_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/menu_collectors"
            android:textSize="30sp" />
            
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:id="@+id/collectors_fragment_desc"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="Encuentra coleccionistas"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/searchTextCollector"
                    android:layout_width="188dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Buscar"
                    android:inputType="text"
                    android:textColorHint="#5B5C58"
                    android:importantForAutofill="no" />
            </TableRow>
        </TableLayout>

        <FrameLayout
            android:paddingTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="507dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.AlbumFragment"
            tools:layout_editor_absoluteX="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collectorsRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/collector_item" />
        </FrameLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>