<resources>
    <string name="app_name">Vinilos App</string>
    <string name="body_landing">Ingresar Como</string>
    <string name="visitor"><b>VISITANTE</b></string>
    <string name="collector"><b>COLECCIONISTA</b></string>
    <string name="title_activity_albums">Álbums</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_title">Vinilos App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_albums">Álbums</string>
    <string name="title_artists">Artistas</string>
    <string name="menu_artists">Artistas</string>
    <string name="menu_collectors">Coleccionistas</string>
    <string name="btn_new_album">NUEVO ÁLBUM</string>
    <string name="albums_fragment_desc">Encuentra tu álbum favorito</string>
    <string name="artists_fragment_desc">Encuentra tus artistas preferidos</string>
    <string name="birthday_artist_desc">Fecha de nacimiento</string>
    <string name="albums_artist_desc">Albumes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="album_lbl_releaseDate">Fecha de lanzamiento</string>
    <string name="album_lbl_genre">Género</string>
    <string name="album_lbl_recordLabel">Sello discográfico</string>
    <string name="album_lbl_desCoverImg">Portada del álbum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artist_detail_desc">Descripción</string>
    <string name="buscarString">Buscar</string>
    <string name="collector_tel_desc">Teléfono:</string>
    <string name="collector_email_desc">Email:</string>
    <string name="collector_albumes_desc">Álbumes</string>
    <string name="newAlbumNameHint">Nombre del Nuevo Álbum</string>
    <string name="newTrackNameHint">Nombre del Nuevo Track</string>
    <string name="editTextTrackMinutesLabelText">Minutos de duracion</string>
    <string name="editTextTrackSecondsLabelText">Segundos de duracion</string>
    <string name="newTrackSave">Guardar nuevo track</string>
    <string name="create_track_fail">Ha ocurrido un error creando el track</string>
    <string name="create_track_succes">Track creado exitosamente</string>
    <string name="album_lbl_coverURL">Portada del álbum</string>
    <string-array name="Genres">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string-array name="RecordLabels">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
    <string name="album_description">Descripción</string>
    <string name="newAlbumSave">Guardar</string>
    <string name="newAlbumNewTrack">Nuevo track</string>
    <string name="contDesc_appLogo">Logo dela aplicación: disco de vinilo</string>
    <string name="contDesc_visitorButton">Ingreso a la aplicación con el rol visitante</string>
    <string name="contDesc_collectorButton">Ingreso a la aplicación con el rol coleccionista</string>
    <string name="albums_fragment_search">Buscar</string>
    <string name="fill_all_fields">Debe diligenciar todos los campos</string>
    <string name="create_album_fail">Ha ocurrido un error creando el álbum</string>
    <string name="create_album_succes">Álbum creado exitosamente</string>
    <string name="title_albums_fragment">Álbumes disponibles</string>
</resources>