<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_albums_menu"
            android:icon="@drawable/ic_baseline_album_24"
            android:title="@string/menu_albums" />
        <item
            android:id="@+id/nav_artists_menu"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_artists" />
        <item
            android:id="@+id/nav_collectors_menu"
            android:icon="@drawable/ic_baseline_collections_bookmark_24"
            android:title="@string/menu_collectors" />
    </group>
</menu>