...
                android:layout_height="match_parent"
                android:stretchColumns="2">

                <TableRow android:gravity="center">

                    <ImageView
                        android:id="@+id/visitor1"
                        android:layout_width="211dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_visitantes"
                        android:contentDescription="@string/contDesc_visitorButton"/>

                    <ImageView
                        android:id="@+id/collector1"
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_coleccionistas"
                        android:contentDescription="@string/contDesc_collectorButton"/>
                </TableRow>

...
