...
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="2"
            tools:context=".AlbumsActivity">

            <TextView
                android:id="@+id/artists_fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/title_artists"
                android:textSize="30sp" />
...
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.AlbumFragment"
            tools:layout_editor_absoluteX="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/artistsRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/album_item" />
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
